# paraclete

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  instrument.yaml  opencode.json
.cargo/: config.toml
crates/paraclete-antiphon/: Cargo.toml
crates/paraclete-antiphon/src/: http.rs  kerygma.rs  lib.rs  protocol.rs  server.rs  surface.rs  view.rs
crates/paraclete-app/: Cargo.toml
crates/paraclete-app/src/: builder.rs  instrument.rs  lib.rs  main.rs  patch.rs  project.rs  registry.rs
crates/paraclete-app/tests/: app_wiring_tests.rs  instrument_tests.rs  patch_tests.rs  project_tests.rs  timing_measure.rs
crates/paraclete-clap/: Cargo.toml
crates/paraclete-clap-host/: Cargo.toml
crates/paraclete-clap/src/: bridge.rs  ffi.rs  lib.rs  plugin.rs  process_input.rs  single_node.rs  subgraph.rs  transport.rs
crates/paraclete-clap/tests/: clap_validator.rs  infrastructure_tests.rs  single_node_tests.rs  subgraph_tests.rs
crates/paraclete-graph-nodes/: Cargo.toml
crates/paraclete-graph-nodes/src/: inner_graph.rs  lib.rs
crates/paraclete-hal/: Cargo.toml
crates/paraclete-hal/src/: audio.rs  lib.rs  rtkit.rs
crates/paraclete-hal/src/digitakt/: mod.rs
crates/paraclete-hal/src/emulator/: mod.rs  surface.rs  terminal.rs
crates/paraclete-hal/src/keystep/: mod.rs
crates/paraclete-hal/src/launchpad/: mod.rs
crates/paraclete-hal/src/midi/: mod.rs
crates/paraclete-machine-fm-bass/: Cargo.toml
crates/paraclete-machine-fm-bass/src/: lib.rs
crates/paraclete-machine-fm-bell/: Cargo.toml
crates/paraclete-machine-fm-bell/src/: lib.rs
crates/paraclete-machine-fm-kick/: Cargo.toml
crates/paraclete-machine-fm-kick/src/: lib.rs
crates/paraclete-machine-kick/: Cargo.toml
crates/paraclete-machine-kick/src/: lib.rs
crates/paraclete-machine-snare/: Cargo.toml
crates/paraclete-machine-snare/src/: lib.rs
crates/paraclete-node-api/: Cargo.toml  README.md
crates/paraclete-node-api/src/: agreement.rs  buffer.rs  capability.rs  command.rs  constants.rs  context.rs  debug.rs  event.rs  hardware.rs  lib.rs  midi.rs  node.rs  parameter.rs  port.rs  rule.rs  state_bus.rs  surface.rs  templates.rs  tempo_source.rs  transport.rs
crates/paraclete-node-api/tests/: node_implementations.rs
crates/paraclete-nodes/: Cargo.toml
crates/paraclete-nodes/src/: analog_engine.rs  delay.rs  distortion.rs  engine_dsp.rs  envelope.rs  filter.rs  fm_engine.rs  gateway.rs  internal_clock.rs  ladder.rs  lfo.rs  lib.rs  loop_break.rs  mapping.rs  mix.rs  oscillator.rs  pattern.rs  reverb.rs  sampler.rs  sequencer.rs  split.rs
crates/paraclete-nodes/tests/: eight_track_pattern.rs
crates/paraclete-runtime/: Cargo.toml
crates/paraclete-runtime/src/: configurator.rs  executor.rs  graph.rs  lib.rs  message.rs  ring_buffer.rs  runtime_counters.rs  state_bus.rs
crates/paraclete-runtime/tests/: runtime_integration.rs
crates/paraclete-scripting/: Cargo.toml
crates/paraclete-scripting/src/: lib.rs
crates/paraclete-theotokos/: Cargo.toml
crates/paraclete-tui/: Cargo.toml
crates/paraclete-tui/src/: app.rs  layout.rs  lib.rs  state.rs
crates/paraclete-tui/tests/: tui_tests.rs
crates/paraclete-view-assembly/: Cargo.toml
crates/paraclete-view-assembly/src/: lib.rs
design/: architecture-core.md  architecture-evolving-append.md  architecture-evolving.md  bugs.md  handoff.md  instrument-vision.md  interface-plan.md  prior-art-analysis.md  roadmap.md  todo-scratch.md
design/adr/: ADR-001-license.md  ADR-002-language.md  ADR-003-plugin-format.md  ADR-004-signal-model.md  ADR-005-scheduler-cycles.md  ADR-006-hardware-emulator.md  ADR-007-scripting-runtime.md  ADR-008-node-api-level.md  ADR-009-clock-federation.md  ADR-010-state-model.md  ADR-011-executor-model.md  ADR-012-buffer-allocation.md  ADR-013-event-model.md  ADR-014-capability-document.md  ADR-015-connection-negotiation.md  ADR-016-multi-track-sequencer.md  ADR-017-effect-node-architecture.md  ADR-018-cellular-architecture.md  ADR-019-universal-parameter-control.md  ADR-020-launchpad-profile-digitakt.md  ADR-021-launchpad-x-protocol.md  ADR-022-node-portability.md  ADR-023-instrument-encapsulation.md  ADR-024-clap-wrapper.md  ADR-025-project-file-format.md  ADR-026-instrument-definition-tui.md  ADR-027-clap-host.md  ADR-028-loop-break-node.md  ADR-029-dynamic-topology.md  ADR-030-pattern-engine.md  ADR-031-antiphon-interface-server.md  ADR-032-theoria-view-plugin-api.md  ADR-033-headless-test-driver.md  ADR-034-runtime-observability.md  ADR-035-debug-baselines-and-structured-log.md  ADR-036-praxis-performance-terminal.md  ADR-036-theotokos-performance-terminal.md  ADR-037-theotokos-key-remapping.md  ADR-038-theotokos-elektron-convergence.md  ADR-039-performance-state.md  (+5 more)
design/phases/: p0-interfaces.md  p0-report.md  p1-interfaces.md  p1-report.md  p10-interfaces.md  p10-report.md  p11-problem.md  p2-interfaces.md  p2-report.md  p3-interfaces.md  p3-report.md  p4-interfaces.md  p4-report.md  p5-interfaces.md  p5-report.md  p6-interfaces.md  p6-report.md  p6.5-plan.md  p6.5-report.md  p7-interfaces.md  p7-report.md  p8-interfaces.md  p8-report.md  p9-interfaces.md  p9-report.md  p9.5-interfaces.md  theoria-baseline-interactions-report.md  theoria-legibility-report.md  tk0-report.md  tk0-theotokos.md  tk1-report.md  tk1-theotokos.md  tk2-theotokos.md  w0-interfaces.md  w0-report.md  w1-interfaces.md  w1-report.md  w2-interfaces.md  w2-report.md
profiles/: digitakt.rhai  keystep.rhai  launchpad.rhai  launchpad_overview.rhai
tools/gen-samples/: Cargo.toml
tools/gen-samples/src/: main.rs
tools/lpx-debug/: Cargo.toml
tools/lpx-debug/src/: main.rs
tools/test-driver/: Cargo.toml
tools/test-driver/src/: analysis.rs  baseline.rs  main.rs  resolve.rs  scenario.rs  wav.rs
tools/test-driver/tests/: audit_chain.yaml  audit_pattern.yaml  audit_sequencer.yaml  audit_trigger.yaml  engine_counters_quiet.yaml  kick_rehit.yaml  kick_reverb_clean.baseline.json  kick_reverb_clean.yaml  plock_authoring.baseline.json  plock_authoring.yaml  session_start_clean.yaml
web/: package-lock.json  package.json
(+41 files in other folders)
