[workspace]
resolver = "2"
default-members = ["crates/paraclete-app"]
members = [
    "crates/paraclete-node-api",
    "crates/paraclete-runtime",
    "crates/paraclete-hal",
    "crates/paraclete-nodes",
    "crates/paraclete-scripting",
    "crates/paraclete-app",
    "crates/paraclete-clap",
    "crates/paraclete-machine-kick",
    "crates/paraclete-machine-snare",
    "crates/paraclete-machine-fm-kick",
    "crates/paraclete-machine-fm-bell",
    "crates/paraclete-machine-fm-bass",
    "tools/gen-samples",
    "tools/lpx-debug",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Paraclete Contributors"]
rust-version = "1.75"

[workspace.dependencies]
paraclete-node-api  = { path = "crates/paraclete-node-api" }
paraclete-runtime   = { path = "crates/paraclete-runtime" }
paraclete-hal       = { path = "crates/paraclete-hal" }
paraclete-nodes     = { path = "crates/paraclete-nodes" }
paraclete-scripting = { path = "crates/paraclete-scripting" }
paraclete-clap      = { path = "crates/paraclete-clap" }
clap-sys            = "0.5"

cpal      = "0.15"
rhai      = "1"
rtrb      = "0.3"
hound     = "3.5"
petgraph  = "0.6"
log       = "0.4"
midi2     = "0.11"
midir     = "0.9"
ctrlc     = "3"
fastrand  = "2"
rubato    = "0.15"
symphonia = { version = "0.5", features = ["all"] }
ron        = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
