[workspace]
resolver = "2"
default-members = ["crates/paraclete-app"]
members = [
    "crates/paraclete-node-api",
    "crates/paraclete-runtime",
    "crates/paraclete-hal",
    "crates/paraclete-nodes",
    "crates/paraclete-scripting",
    "crates/paraclete-app",
    "crates/paraclete-clap",
    "crates/paraclete-machine-kick",
    "crates/paraclete-machine-snare",
    "crates/paraclete-machine-fm-kick",
    "crates/paraclete-machine-fm-bell",
    "crates/paraclete-machine-fm-bass",
    "crates/paraclete-tui",
    "crates/paraclete-clap-host",
    "crates/paraclete-graph-nodes",
    "crates/paraclete-antiphon",
    "tools/gen-samples",
    "tools/lpx-debug",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Paraclete Contributors"]
rust-version = "1.75"

[workspace.dependencies]
paraclete-node-api    = { path = "crates/paraclete-node-api" }
paraclete-runtime     = { path = "crates/paraclete-runtime" }
paraclete-hal         = { path = "crates/paraclete-hal" }
paraclete-nodes       = { path = "crates/paraclete-nodes" }
paraclete-scripting   = { path = "crates/paraclete-scripting" }
paraclete-clap        = { path = "crates/paraclete-clap" }
paraclete-clap-host   = { path = "crates/paraclete-clap-host" }
paraclete-graph-nodes = { path = "crates/paraclete-graph-nodes" }
paraclete-antiphon    = { path = "crates/paraclete-antiphon" }
clap-sys            = "0.5"
libloading          = "0.8"
tungstenite         = "0.21"
tiny_http           = "0.12"
serde_json          = "1"
include_dir         = "0.7"

cpal      = "0.15"
rhai      = "1"
rtrb      = "0.3"
hound     = "3.5"
petgraph  = "0.6"
log       = "0.4"
midi2     = "0.11"
midir     = "0.9"
ctrlc     = "3"
fastrand  = "2"
rubato    = "0.15"
symphonia = { version = "0.5", features = ["all"] }
ron        = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_yml = "0.0"
ratatui    = "0.26"
crossterm  = "0.27"
