[package]
name        = "paraclete-app"
description = "Paraclete standalone application binary"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true
license     = "GPL-3.0-or-later"

[lib]
name = "paraclete_app"
path = "src/lib.rs"

[[bin]]
name = "paraclete"
path = "src/main.rs"

[dependencies]
paraclete-node-api    = { workspace = true }
paraclete-runtime     = { workspace = true }
paraclete-hal         = { workspace = true }
paraclete-nodes       = { workspace = true }
paraclete-scripting   = { workspace = true }
paraclete-tui         = { path = "../paraclete-tui" }
paraclete-clap-host   = { path = "../paraclete-clap-host" }
paraclete-graph-nodes = { workspace = true }
paraclete-antiphon    = { workspace = true }
fastrand  = { workspace = true }
log       = { workspace = true }
rhai      = { workspace = true }
ctrlc     = { workspace = true }
ratatui   = { workspace = true }
crossterm = { workspace = true }
ron        = { workspace = true }
serde      = { workspace = true }
serde_yml = { workspace = true }
