[package]
name        = "paraclete-app"
description = "Paraclete standalone application binary"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true
license     = "GPL-3.0-or-later"

[lib]
name = "paraclete_app"
path = "src/lib.rs"

[[bin]]
name = "paraclete"
path = "src/main.rs"

[dependencies]
paraclete-node-api    = { workspace = true }
paraclete-runtime     = { workspace = true }
paraclete-hal         = { workspace = true }
paraclete-nodes       = { workspace = true }
paraclete-scripting   = { workspace = true }
paraclete-tui          = { path = "../paraclete-tui" }
paraclete-theotokos    = { path = "../paraclete-theotokos" }
paraclete-clap-host   = { path = "../paraclete-clap-host" }
paraclete-graph-nodes = { workspace = true }
paraclete-antiphon    = { workspace = true }
fastrand  = { workspace = true }
log       = { workspace = true }
rhai      = { workspace = true }
ctrlc     = { workspace = true }
ratatui   = { workspace = true }
crossterm = { workspace = true }
ron        = { workspace = true }
serde      = { workspace = true }
serde_yml = { workspace = true }
include_dir = { workspace = true, optional = true }

[features]
# Embed the built Theoria bundle (web/packages/app/dist) into the binary
# (w1-interfaces.md §Commit 4). `--theoria-dir` still overrides for dev.
embed-ui = ["dep:include_dir", "paraclete-antiphon/embed-ui"]
