[package]
name        = "paraclete-machine-fm-bell"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true
license     = "GPL-3.0-or-later"

[lib]
name = "paraclete_machine_fm_bell"
crate-type = ["cdylib"]

[dependencies]
paraclete-clap  = { workspace = true }
paraclete-nodes = { workspace = true }
clap-sys        = { workspace = true }
