[package]
name        = "paraclete-machine-kick"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true
license     = "GPL-3.0-or-later"

[lib]
name = "paraclete_machine_kick"
crate-type = ["cdylib"]

[dependencies]
paraclete-clap  = { workspace = true }
paraclete-nodes = { workspace = true }
clap-sys        = { workspace = true }
