[package]
name        = "paraclete-nodes"
description = "Paraclete L3 first-party nodes — sequencer, sampler, synth engines, effects"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true
license     = "GPL-3.0-or-later"

[dependencies]
paraclete-node-api = { workspace = true }
log      = { workspace = true }
rtrb     = { workspace = true }
fastrand = { workspace = true }
rubato   = { workspace = true }
symphonia = { workspace = true }
