[package]
name        = "paraclete-scripting"
description = "Paraclete L4 Scripting — sandboxed Rhai runtime for live hardware mapping and macros"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true
license     = "GPL-3.0-or-later"

[dependencies]
paraclete-node-api = { workspace = true }
rhai = { workspace = true }
log  = { workspace = true }
